Updated urls.py for all CRUD operations

--- a/apps/constructionCheck/templates/constructionCheck/index.html
+++ b/apps/constructionCheck/templates/constructionCheck/index.html
@@ -38,6 +38,12 @@
         <div>
           <input type="password" name="password">
         </div>
+
+        <label>Password Confirmation</label>
+        <div>
+          <input type="password" name="password_confirm">
+        </div>
+
         <input type="submit" value="Register">
       </form>
     </fieldset>
