--- a/apps/constructionCheck/templates/constructionCheck/index.html
+++ b/apps/constructionCheck/templates/constructionCheck/index.html
@@ -1,72 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Login/Registration</title>
-  </head>
-  <body>
-    {% if messages %}
-      <ul class="messages">
-      {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-      {% endfor %}
-      </ul>
-    {% endif %}
-
-    <!-- Start Registration Form -->
-    <fieldset>
-      <legend>Register</legend>
-      <form action="/createUser" method="post">
-        {% csrf_token %}
-
-        <label>First Name</label>
-        <div>
-          <input type="text" name="first_name">
-        </div>
-
-        <label>Last Name</label>
-        <div>
-          <input type="text" name="last_name">
-        </div>
-
-        <label>Email</label>
-        <div>
-          <input type="email" name="email">
-        </div>
-
-        <label>Password</label>
-        <div>
-          <input type="password" name="password">
-        </div>
-
-        <label>Password Confirmation</label>
-        <div>
-          <input type="password" name="password_confirm">
-        </div>
-
-        <input type="submit" value="Register">
-      </form>
-    </fieldset>
-    <!-- End Registration Form -->
-
-    <!-- Start Login Form -->
-    <fieldset>
-      <legend>Login</legend>
-      <form action="/login" method="post">
-        {% csrf_token %}
-        <label>Email</label>
-        <div>
-          <input type="email" name="email">
-        </div>
-
-        <label>Password</label>
-        <div>
-          <input type="password" name="password">
-        </div>
-
-        <input type="submit" value="Login">
-      </form>
-    </fieldset>
-    <!-- End Login Form -->
-  </body>
-</html>
+<h1>This is the index page idiot</h1>
